src/less/body.less
.ui-grid-viewport {
  // overflow: auto; // TODO(c0bra): turn back on when virtual repeater is hooked up
  min-height: 20px;
  position: relative;
  overflow: hidden;

  :focus {
    outline: none;
  }
}

.ui-grid-canvas {
  position: relative;
}

.ui-grid-row {
  //position: absolute;
  // border-bottom: 1px solid @borderColor;

  &:nth-child(odd) .ui-grid-cell {
    background-color: @rowColorOdd; //rgb(253, 253, 253);
  }

  &:nth-child(even) .ui-grid-cell {
    background-color: @rowColorEven;
  }

  &:last-child .ui-grid-cell {
    border-bottom-color: @borderColor;
    border-bottom-style: solid;
  }
}

